# critiq

./: .gitignore  README.md  pyproject.toml
src/critiq/: __init__.py  cli.py  config.py  fixer.py  formatter.py  git_utils.py  hooks.py  learn.py  providers.py  report.py  report_cli.py  reviewer.py  scan_cli.py  watcher.py  web_report.py
tests/: test_cli.py  test_config.py  test_fixer.py  test_formatter.py  test_git_utils.py  test_hooks.py  test_integration_llm.py  test_learn.py  test_providers.py  test_report.py  test_reviewer.py  test_scan_cli.py  test_watcher.py  test_web_report.py
