[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "critiq"
version = "1.2.0"
description = "AI-powered local code reviewer — catch issues before you push"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "code-review", "git", "cli", "developer-tools", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/faw21/critiq"
Repository = "https://github.com/faw21/critiq"
"Bug Tracker" = "https://github.com/faw21/critiq/issues"

[project.scripts]
critiq = "critiq.cli:main"
critiq-learn = "critiq.learn:main"
critiq-report = "critiq.report_cli:main"

[project.optional-dependencies]
watch = [
    "watchfiles>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/critiq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=critiq --cov-report=term-missing"

[tool.coverage.run]
source = ["src/critiq"]
